fix-spacing-betweenScrollers

--- a/public/style.css
+++ b/public/style.css
@@ -2837,11 +2837,11 @@ input:checked + .slider:before {
     display: flex;
     overflow-x: auto;
     white-space: nowrap;
-    gap: 0.2rem;
+    gap: 0.3rem;
     padding-bottom: 10px;
     -webkit-overflow-scrolling: touch;
     scroll-behavior: smooth; /* Ensure smooth scrolling behavior */
-    width: 95%;
+    width: 100%;
 }
 
 .subcategory-card-wrapper::-webkit-scrollbar {
